samples/_failures_safe/1761258009_23c9b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef2a6037.c: In function ‘main’:
./samples/SAFE/__tmp_ef2a6037.c:153:17: error: expected declaration or statement at end of input
  153 |                 } else if (status == -1) {
      |                 ^
./samples/SAFE/__tmp_ef2a6037.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ef2a6037.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ef2a6037.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ef2a6037.c:153:17: error: expected declaration or statement at end of input
